--- a/style.css
+++ b/style.css
@@ -31,12 +31,11 @@ body {
 .setting_menu {
     width: 460px;
     height: 100%;
-    border: 1px solid white;
+   
 }
 .orar_menu {
     width: 750px;
     height: 100%;
-    border: 1px solid white;
 }
 .title_setting-menu {
     margin-top: 20px;
@@ -209,17 +208,80 @@ select {
     width: 100%;
     height: 100%;
     border: 1px solid gray;
+    
     border-left: 0;
     border-top: 0;
     text-align: center;
     cursor: pointer;
 }
 .row_orar-item.seminar {
-    background: rgb(255, 83, 83);
+    background: rgb(149, 219, 140);
 }
 .row_orar-item.laborator {
     background: rgb(124, 255, 63);
 }
 .row_orar-item.prelegeri {
-    background: rgb(189, 190, 255);
+    background: rgb(233, 148, 166);
+}
+.text-orar {
+    color: #ffffff;
+    margin-top: 20px;
+    font-size: 12px;
+    line-height: 1.2;
+    text-align: center;
+    max-height: 100%;
+    overflow: hidden;
+}
+.button-group {
+
+
+    }
+.icon-button {
+    background: #25975A;
+    color: #dddddd;
+    margin-top: 20px;
+}
+.bot {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 100%;
+    height: 50px;
+    background: #f8f8f8;
+    color: #1dd40c;
+    display: flex;
+    align-items: center;
+}
+.image-container{
+    display: flex;
+    justify-content: center; 
+    margin-top: 20px; 
+    
+}
+.university-text {
+    margin-top: 10px; 
+    margin-bottom: 20px;
+    font-size: 16px; 
+    font-weight: bold; 
+    color: #ffffff; 
+    text-align: center; 
+}
+.conteiners {
+    grid-template-columns: 140px 560px;
+    grid-template-rows: ;
+    grid-auto-rows: minmax( 50px, auto);
+    display: grid;
+    color: #ffffff;
+    
+}
+.item {
+    padding: 10px;
+    border: 1px solid rgb(255, 255, 255);
+    place-items: center;
+    text-align: center;
+}
+.item_1, .item_3, .item_5, .item_7, .item_9, .item_11, .item_13 {
+    background-color: #25975A; 
+    color: white;
+    border: 1px solid black;
+    
 }
